tests/NormalTests/paczka1/small_fuzzy/71143480.err
Error in line 12: hIMla54 A93 0,3
Error in line 14: KSJy4m0AwK S1OO 22,8
